@@ -1,3 +1,9 @@
+2010-03-20  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/tabs/tab.jl
+	* lisp/sawfish/wm/tabs/tabgroup.jl: several additions, check man/news.texi [Fuchur]
+
+	* man/news.texi: updated
+
 2010-03-20  Teika Kazura <teika@lavabit.com>
 	* lisp/sawfish/wm/windows.jl
 	* man/news.texi
